<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fundo1" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:text="@string/cadastro_usuario"/>
    
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:text="@string/insira_codigo_email"/>
    
    <EditText 
        android:id="@+id/codigoEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:inputType="textEmailAddress"
        android:hint="@string/codigo"/>
    

        
    <Button 
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:text="@string/continuar" 
        android:onClick="continuar"/>       

</LinearLayout>
