<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fundo1" >
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/novo_feed"/>
    
    <TextView 
        android:id="@+id/nomeGrupo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"/>
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"/>
    
    <EditText 
        android:id="@+id/tituloFeed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo"/>
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/detalhe"/>
    
    <EditText 
        android:id="@+id/detalheFeed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="5"
        android:hint="@string/detalhe"/>    
        
    <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/publicar_feed"
        android:onClick="publicarFeed"/>    

</LinearLayout>
