<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fundo1" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textSize="25sp"
        android:text="@string/novo_grupo"/>
    
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/nome"/>
    
    <EditText 
        android:id="@+id/nomeGrupo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"/>
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/descricao"/>
    
    <EditText
        android:id="@+id/descricaoGrupo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/descricao"
        android:lines="3" />
        
    <Button 
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/salvar" 
        android:onClick="salvarGrupo"/>    

</LinearLayout>
