<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fundo"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:text="@string/usuario"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edtxtUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:alpha="0.5"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="text"
            android:text="@string/usuario"
            android:textColor="#000000" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/txtPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:text="@string/senha"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edtxtPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:alpha="0.5"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/senha"
            android:textColor="#000000" />
        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnEntra"
                style="?android:attr/buttonStyleSmall"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="78dp"
                android:text="@string/entrar"
                android:textColor="#ffffff" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esqueceu_sua_senha"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/cadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/cadastrar" 
            android:clickable="true"
            android:textColor="#ffffff" />
        
    </LinearLayout>
    

</RelativeLayout>